Thêm class Bullet, chưa va chạm, chưa bắn được.
- Thêm comment để dễ fix trường hợp code lỗi.
- Thêm một số hằng trong class Settings.